# advent-of-code-2024

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: cpp_warnings.cmake
resources/: CMakeLists.txt
src/: CMakeLists.txt
src/adventlib/: CMakeLists.txt
src/adventlib/include/adventlib/: Direction.hpp  Field.hpp  Parser.hpp  Point.hpp  macros.hpp  utilities.hpp
src/adventlib/include/adventlib/inl/: Direction.inl  Field.inl  Parser.inl  Point.inl  utilities.inl
src/adventlib/src/: utilities.cpp
src/days/: CMakeLists.txt
src/days/include/: days.hpp
src/days/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  days.cpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  all_tests.cpp
